<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="116dp"
        android:layout_height="102dp"
        android:layout_marginStart="147dp"
        android:layout_marginLeft="147dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="148dp"
        android:contentDescription="@string/logo_of_collage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/iist_logo" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="370dp"
        android:layout_height="43dp"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.647"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/textView"
            android:layout_width="275dp"
            android:layout_height="match_parent"
            android:text="@string/bluetooth"
            android:textColor="#0B0000"
            android:textSize="30sp" />

        <ToggleButton
            android:id="@+id/bluetooth_toggle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/bluetooth_button"
            android:checked="false"
            android:onClick="bluetoothClick"
            android:text=""
            android:textOff=""
            android:textOn="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="370dp"
        android:layout_height="43dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="275dp"
            android:layout_height="match_parent"
            android:text="@string/list_devices"
            android:textColor="#0B0000"
            android:textSize="30sp" />

        <Button
            android:id="@+id/findButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:onClick="discoverDevice"
            android:text="@string/find"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/sendReceive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="sendReceiveActivity"
        android:text="Send/Receive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="366dp"
        android:layout_height="87dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="239dp"
            android:layout_height="27dp"
            android:layout_weight="4"
            android:text="Conneted Device"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/deivceNameConnected"
            android:layout_width="201dp"
            android:layout_height="10dp"
            android:layout_weight="6"
            android:text="None"
            android:textColor="#000000"
            android:textSize="30sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:onClick="textLimitSetDialog"
        android:text="Select Text Limit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendReceive" />

</androidx.constraintlayout.widget.ConstraintLayout>